--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </form>
 
 
-        <div class="modal" id="modal">
+<!--         <div class="modal" id="modal">
             <div class="modalbody">
                 <img class="logoModal" src="./logo_dark.png" alt="logo kawiarni">
                 <h1> MERCI</h1>
@@ -54,7 +54,7 @@
                 <p>Nous essaierons d'y repondre au mieux dans les plus brefs delais. <br>
                     A bientot chez Mr.Coffee</p>
 
-            </div>
+            </div> -->
 
             <button data-close-button class="close-button">FERMER</button>
         </div>
